[gd_scene load_steps=6 format=3 uid="uid://b8i2hf8651ciu"]

[ext_resource type="FontFile" uid="uid://bixk2yuo1x2ap" path="res://assets/MaldiniBold.ttf" id="1_g5p5y"]
[ext_resource type="Script" path="res://scripts/gui.gd" id="1_un118"]
[ext_resource type="Script" path="res://scripts/StartLevelButton.gd" id="2_1ph2g"]
[ext_resource type="Script" path="res://scripts/ResetLevelButton.gd" id="4_ojoei"]
[ext_resource type="Script" path="res://scripts/ScoreDisplay.gd" id="5_il5d8"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_un118")
metadata/_edit_vertical_guides_ = [1920.0]
metadata/_edit_horizontal_guides_ = [1080.0]

[node name="StartLevelButton" type="Button" parent="."]
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -125.0
offset_right = 147.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_g5p5y")
theme_override_font_sizes/font_size = 60
text = "START LEVEL"
script = ExtResource("2_1ph2g")

[node name="ResetLevelButton" type="Button" parent="."]
visible = false
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -125.0
offset_right = 147.5
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_g5p5y")
theme_override_font_sizes/font_size = 60
text = "RESET LEVEL"
script = ExtResource("4_ojoei")

[node name="Score" type="Label" parent="."]
offset_left = 60.0
offset_top = 30.0
offset_right = 153.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("1_g5p5y")
theme_override_font_sizes/font_size = 32
text = "SCORE: 0"
script = ExtResource("5_il5d8")

[node name="SurvivalPointsCooldown" type="Timer" parent="Score"]

[connection signal="StartScoringCounter" from="." to="Score" method="_on_gui_start_scoring_counter"]
[connection signal="StartGame" from="StartLevelButton" to="." method="_on_start_level_button_start_game"]
[connection signal="pressed" from="StartLevelButton" to="StartLevelButton" method="_on_pressed"]
[connection signal="ResetGame" from="ResetLevelButton" to="." method="_on_reset_level_button_reset_game"]
[connection signal="pressed" from="ResetLevelButton" to="ResetLevelButton" method="_on_pressed"]
[connection signal="timeout" from="Score/SurvivalPointsCooldown" to="Score" method="_on_survival_points_cooldown_timeout"]
